# llvm-abi

./: .travis.yml  CMakeLists.txt  LICENSE  README  README.md
cmake/modules/: FindLLVM.cmake
include/llvm-abi/: ABI.hpp  ABITypeInfo.hpp  ArgInfo.hpp  ArgumentIRMapping.hpp  Builder.hpp  Callee.hpp  Caller.hpp  CallingConvention.hpp  Context.hpp  DataSize.hpp  DefaultABITypeInfo.hpp  FunctionEncoder.hpp  FunctionIRMapping.hpp  FunctionType.hpp  LLVMUtils.hpp  Support.hpp  Type.hpp  TypeBuilder.hpp  TypePromoter.hpp  TypedValue.hpp
include/llvm-abi/x86/: ABI_Win64.hpp  ABI_x86.hpp  ArgClass.hpp  CPUFeatures.hpp  CPUKind.hpp  Classification.hpp  Classifier.hpp  Win64ABI.hpp  X86ABI.hpp  X86ABITypeInfo.hpp  X86_32ABI.hpp  X86_32ABITypeInfo.hpp  X86_32Classifier.hpp  X86_64ABI.hpp  X86_64ABITypeInfo.hpp
include/llvm-abi/x86_64/: ArgClass.hpp  CPUFeatures.hpp  Classification.hpp  Classifier.hpp  X86_64ABI.hpp  X86_64ABITypeInfo.hpp
lib/: ABI.cpp  CMakeLists.txt  Callee.cpp  Caller.cpp  Context.cpp  DefaultABITypeInfo.cpp  FunctionIRMapping.cpp  LLVMUtils.cpp  Type.cpp  TypeBuilder.cpp  TypePromoter.cpp
lib/win64/: ABI_Win64.cpp  ABI_Win64.hpp
lib/x86/: ABI_Win64.cpp  ABI_x86.cpp  ABI_x86.hpp  ArgClass.cpp  CPUFeatures.cpp  CPUKind.cpp  Classification.cpp  Classifier.cpp  Win64ABI.cpp  X86ABI.cpp  X86ABITypeInfo.cpp  X86_32ABI.cpp  X86_32ABITypeInfo.cpp  X86_32Classifier.cpp  X86_64ABI.cpp  X86_64ABITypeInfo.cpp
lib/x86_64/: ABI_x86_64.cpp  ABI_x86_64.hpp  ArgClass.cpp  CPUFeatures.cpp  CPUKind.cpp  Classification.cpp  Classification.hpp  Classifier.cpp  TypeInfo.cpp  TypeInfo.hpp  X86_64ABI.cpp  X86_64ABITypeInfo.cpp
test/: CCodeGenerator.cpp  CCodeGenerator.hpp  CMakeLists.txt  ParseTest.cpp  TestFunctionType.hpp  TestSystem.hpp  TokenStream.cpp  TokenStream.hpp  TypeParser.hpp
test/x86/: CMakeLists.txt  Pass1Float.ll  Pass1Int.ll  Pass2Floats.ll  Pass2Ints.ll  Pass6IntsAndChar.ll  Pass6IntsAndPtr.ll  Pass9Floats.ll  PassArrayStructDoubleIntLong.ll  PassIntStructShortUintInt.ll  PassStruct1Float.ll  PassStruct1Int.ll  PassStruct2Floats.ll  PassStruct2Ints.ll  PassStruct5Ints.ll  PassStructDoubleInt.ll  PassStructLongDouble.ll  PassUnionArray5IntsFloat.ll  ReturnFloat.ll  ReturnLongDouble.ll  ReturnSChar.ll  ReturnStruct1Int.ll  ReturnStruct2Ptrs.ll  ReturnStruct4Ints.ll  ReturnStructLongInt.ll  ReturnUChar.ll  ReturnUShort.ll  VarArgsPassIntVACharShortIntFloatDouble.ll  VarArgsPassIntVAInt.ll  VarArgsPassIntVANone.ll
test/x86/Darwin/: CMakeLists.txt  DarwinReturnStructVector1Double.ll  DarwinReturnStructVector1LongLong.ll  DarwinReturnStructVector2Double.ll  DarwinReturnStructVector2LongLong.ll  DarwinReturnVector1Double.ll  DarwinReturnVector1LongLong.ll  DarwinReturnVector2Int.ll  DarwinReturnVector2LongLong.ll
test/x86_32/: CMakeLists.txt  Pass1Int.ll  Pass2Floats.ll  Pass2Ints.ll  Pass8FloatsAndLongDouble.ll  PassArrayStructDoubleInt.ll  PassArrayStructDoubleIntInt.ll  PassCharShortIntLongLongPtr.ll  PassIntStructInt.ll  PassLongLongArrayAndReturnLongLongArray.ll  PassNamedStruct1Int.ll  PassNamedUnion1Int.ll  PassStruct2Floats.ll  PassStruct2Ints.ll  PassStruct3Ints.ll  PassStruct4Ints.ll  PassStructArray1Char3Chars.ll  PassStructArrayVector4FloatsAndReturnStructArrayVector4Floats.ll  PassStructLongDoubleLongDouble.ll  PassStructLongPtr.ll  PassStructLongPtrAndReturnPtr.ll  PassStructVector4FloatsAndReturnStructVector4Floats.ll  PassUnionArray5IntsFloat.ll  PassUnionDoubleInt.ll  PassVector4FloatsAndReturnVector4Floats.ll  ReturnChar.ll  ReturnDouble.ll  ReturnInt.ll  ReturnShort.ll  ReturnStruct1Float.ll  ReturnStruct2Floats.ll  ReturnStruct2Ints.ll  ReturnStruct3Ints.ll  ReturnStruct5Ints.ll  ReturnStructEmptyArrayFloat.ll  ReturnStructFloatUnionEmpty.ll  VarArgsPassIntVAUnionLongDoubleCharLong.ll  VarArgsPassPtrVAPtrIntDouble.ll  VarArgsPassPtrVAStructLongFloat.ll
test/x86_32/Darwin/: CMakeLists.txt  DarwinReturnStructEmptyArrayFloat.ll  DarwinReturnStructFloatUnionEmpty.ll  DarwinReturnStructVector2Int.ll  DarwinReturnStructVector2Short.ll  DarwinReturnVector2Double.ll  DarwinReturnVector2Short.ll
test/x86_64/: AVXPassVarArgs.ll  AVXStructArrayVector8Floats.ll  AVXStructVector8Floats.ll  AVXVector8Floats.ll  CMakeLists.txt  NoAVXPassVarArgs.ll  NoAVXStructArrayVector8Floats.ll  NoAVXStructVector8Floats.ll  NoAVXVector8Floats.ll  Pass1Float.ll  Pass1Int.ll  Pass2Floats.ll  Pass2Ints.ll  Pass6IntsAndChar.ll  Pass6IntsAndPtr.ll  Pass8FloatsAndLongDouble.ll  Pass9Floats.ll  PassArrayStructDoubleInt.ll  PassArrayStructDoubleIntInt.ll  PassArrayStructDoubleIntLong.ll  PassCharShortIntLongLongPtr.ll  PassIntStructInt.ll  PassIntStructShortUintInt.ll  PassLongLongArrayAndReturnLongLongArray.ll  PassNamedStruct1Int.ll  PassNamedStruct2Ints.ll  PassNamedStructPtrInt.ll  PassNamedUnion1Int.ll  PassStruct1Float.ll  PassStruct1Int.ll  PassStruct2Floats.ll  PassStruct2Ints.ll  PassStruct3Ints.ll  PassStruct4Ints.ll  PassStruct5Ints.ll  PassStructArray1Char3Chars.ll  PassStructArrayVector4FloatsAndReturnStructArrayVector4Floats.ll  PassStructDoubleInt.ll  PassStructLongDouble.ll  PassStructLongDoubleLongDouble.ll  (+35 more)
test/x86_64/FunctionCall/: Pass1Int.cpp  Pass2Ints.cpp
test/x86_64/FunctionType/: Pass1Int.cpp  Pass2Ints.cpp  PassArrayStructDoubleInt.cpp  PassCharShortIntLongLongPtr.cpp  PassStruct1Float.cpp  PassStruct1Int.cpp  PassStruct2Floats.cpp  PassStruct2Ints.cpp  PassStruct3FloatsReturnFloat.cpp  PassStruct3Ints.cpp  PassStruct4Ints.cpp  PassStruct5Ints.cpp  PassStructArray1Char3Chars.cpp  PassStructDoubleInt.cpp  ReturnChar.cpp  ReturnDouble.cpp  ReturnFloat.cpp  ReturnInt.cpp  ReturnLongDouble.cpp  ReturnShort.cpp
utils/googletest/: CMakeLists.txt
